# PixSol_Alyra

./: .env  .gitignore  .license  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
.nx/cache/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json
NFT_generation/: generate_imgs_with_counters.py
app/: package-lock.json  package.json  tsconfig.json
app/components/: Header.js  SetupVote.js  ViewVotes.js  Vote.js
app/context/: context.js
app/data/: mintCount.json
app/pages/: index.js
app/public/: idl.json
app/src/app/: layout.tsx  page.tsx
app/src/app/_marketplace/: MerkleTreeService.ts  page.tsx
app/src/app/api/: pixelService.ts
app/src/app/blinkxsol/: page.tsx
app/src/app/compliance/: page.tsx
app/styles/: SetupVote.module.css  globals.css
app/utils/: idl.json  program.js
app2/: package-lock.json  package.json
app2/src/app/: layout.tsx  page.tsx
app2/src/components/: Header.tsx  SetupVote.tsx  ViewVotes.tsx  Votes.tsx
app2/src/context/: context.tsx
app2/src/utils/: program.ts
app2/styles/: Header.module.css  Home.module.css  ViewVotes.module.css  Vote.module.css
programs/deposit/: Cargo.toml  test.ts
programs/dictionary/: Cargo.toml
programs/governance/: Cargo.toml
programs/governance/src/: lib.rs
programs/main/src/: lib.rs
programs/pixel/: Cargo.toml  program_id.json
programs/pixel/src/: lib.rs  lib2.rs  merkle.rs  try.rs
programs/vote/: Cargo.toml
programs/vote/src/: lib.rs
tests/: deposit_dictionary.ts  mockNFTs.ts  vault.ts  vote.ts
wallets/: Collection.json
(+77 files in other folders)
